# subunit2sql

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  TODO.rst  alembic.ini  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
config-generator/: sql2subunit.conf  subunit2sql-db-manage.conf  subunit2sql.conf
doc/source/: api.rst  conf.py  data_model.rst  db_api.rst  graph.rst  index.rst
doc/source/cli/: graph.rst  index.rst
doc/source/contributor/: index.rst
doc/source/reference/: data_model.rst  db_api.rst  index.rst  target-extensions.rst
doc/source/user/: index.rst  usage.rst
etc/: sql2subunit.conf.sample  subunit2sql-db-manage.conf.sample  subunit2sql.conf.sample
releasenotes/notes/: 1.2.0-missing-notes-d0ec5023f7d9328a.yaml  1.3.0-missing-notes-0e12c815ad6f3232.yaml  add-batch-tests-by-test_ids-api-5f2542d214f9968f.yaml  add-date-sort-opt-get_test_runs_by_test_test_id-ba65e97d27fb7dd8.yaml  add-delete-by-uuid-6266652db1c8bb98.yaml  add-get-recent-failed-runs-by-run-meta-f36c5197f3fe869f.yaml  add-get_run_count-api-43daafc592b929ef.yaml  add-graph-time-for-test-run-time-variance-6e61e0d9b4bb0cf9.yaml  add-metadata-unique-constraints-dbee79c2ffedc365.yaml  add-missing-metadata-id-indexes-dec66ab17c5c76c9.yaml  add-recent-successful-runs-by-meta-560c35bcd21ac98e.yaml  add-run-uuid-opt-to-get_test_runs_by_status_for_run_ids-c763ca4d90f8f0ae.yaml  add-start-time-to-recent-list-commands-146b22b742c7a94a.yaml  add_get_runs_by_ids-ffdfc2f86d60c799.yaml  add_key_value_metadata_filter_to_get_run_times-04af21788275df24.yaml  add_non_subunit_name_option-9f898507bfadce16.yaml  add_run_wall_time_option-299ddc24b78f9166.yaml  deprecate-str-dates-on-get_test_counts_in_date_range-b16d285cab135d52.yaml  dpi-cli-flag-64552fd0e10e5d91.yaml  fix-get_ids_for_all_tests-typo-and-update-the-docstring-552735ca593c4613.yaml  fix-get_test_metadata-to-use-test_id-48217d4c7a22b9aa.yaml  get-vars-from-kwargs-57cb5fab5fe8f2e2.yaml  new_db_api_function_get_run_times_times_series-36bca8c069633859.yaml  remove-test-attr-prefix-dff9d378a5e940ab.yaml  subunit2sql_run_at_cli_opt-ab65e3b69b29e0b0.yaml  uuid-to-integers-01055701452e6a62.yaml
releasenotes/source/: conf.py  index.rst  v1.0.0.rst
subunit2sql/: exceptions.py  read_subunit.py  shell.py  subunit.py  write_subunit.py
subunit2sql/analysis/: agg_count.py  ci_time.py  dailycount.py  failures.py  graph.py  run_failure_rate.py  run_time.py  run_time_meta.py  test_run_time.py  utils.py
subunit2sql/db/: api.py  models.py
subunit2sql/migrations/: alembic.ini  cli.py  env.py
subunit2sql/migrations/versions/: 10a2b6d4b06e_add_even_more_indexes.py  13d819bbb0ff_create_missing_indexes.py  163fd5aa1380_create_avg_runtime_column_in_test_table.py  1679b5bc102c_add_subsecond_columns_to_test_runs_table.mysql_upgrade.sql  1679b5bc102c_add_subsecond_columns_to_test_runs_table.py  1f92cfe8a6d3_create_runs_table.py  1ff737bef438_add_indexes_on_common_search_fields.py  2822a408bdd0_uuid_to_integer_ids.py  28ac1ba9c3db_add_run_order_column.py  2fb76f1a1393_rename_test_id_column_in_test_metadata_.py  (+7 more)
subunit2sql/targets/: localdir.py
subunit2sql/tests/: base.py  db_test_utils.py  subunit.py  subunit2sql_fixtures.py  test_read_subunit.py  test_shell.py  test_targets_localdir.py  test_write_subunit.py
(+4 files in other folders)
