[metadata]
name = subunit2sql
summary = Command to Read a subunit file or stream and put the data in SQL DB
description-file =
    README.rst
license = Apache License, Version 2.0
author = Matthew Treinish
author-email = openstack-dev@lists.openstack.org
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3

[files]
packages =
    subunit2sql

[entry_points]
console_scripts =
    subunit2sql = subunit2sql.shell:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
