[metadata]
name = subunit2sql
summary = Command to Read a subunit file or stream and put the data in a SQL DB
description-file =
    README.rst
license = Apache License, Version 2.0
author = Matthew Treinish
author-email = mtreinish@kortar.org
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python
    Programming Language :: Python :: 3


[files]
packages =
    subunit2sql

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    subunit2sql = subunit2sql.shell:main
    sql2subunit = subunit2sql.write_subunit:main
    subunit2sql-db-manage = subunit2sql.migrations.cli:main
    subunit2sql-graph = subunit2sql.analysis.run_time:main
oslo.config.opts =
    subunit2sql.shell = subunit2sql.shell:list_opts
    subunit2sql.write_subunit = subunit2sql.write_subunit:list_opts

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
